<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <ScrollView
        android:id="@+id/scrol_inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <!--Edittext Registro email -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/correo" />

            </android.support.design.widget.TextInputLayout>

            <!--Edittext password -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pass_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/contrasena" />

            </android.support.design.widget.TextInputLayout>

            <!--Edittext confirmar password -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pass_registro_confirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/contrasena_confirmar" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/background_light"
                android:text="@string/Registro" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>