<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrol_inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />

            <!-- email -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- contraseña -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pass_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contrasena"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- Boton Iniciar sesion -->

            <Button
                android:id="@+id/inicio_sesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Iniciar"
                android:onClick="IniciarSesion"/>

            <!-- Boton Registro -->

            <Button
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="Registro"
                android:text="@string/Registro" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>