<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:background="@android:color/background_light">

    <!-- Menu -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Encabezado -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="45dp"
                    android:src="@drawable/logo" />


            </LinearLayout>

            <!-- Factura y Perfil -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:id="@+id/escaner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        android:onClick="onClick">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Factura"
                            android:textColor="@android:color/background_light"
                            android:gravity="center"
                            android:background="@android:color/holo_red_dark"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/scaner"
                            android:layout_marginTop="40dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:onClick="onClick">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Perfil"
                            android:textColor="@android:color/background_light"
                            android:gravity="center"
                            android:background="@android:color/holo_red_dark"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/perfil"
                            android:layout_margin="40dp"/>


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <!-- Historial y Configuracion -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:id="@+id/historial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:onClick="onClick">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Historial"
                            android:textColor="@android:color/background_light"
                            android:gravity="center"
                            android:background="@android:color/holo_red_dark"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/historial"
                            android:layout_margin="40dp"/>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/configuracion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:onClick="onClick">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Configuracion"
                            android:textColor="@android:color/background_light"
                            android:gravity="center"
                            android:background="@android:color/holo_red_dark"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/configuracion"
                            android:layout_margin="40dp"/>

                    </LinearLayout>

                </LinearLayout>


        </LinearLayout>


    </ScrollView>



</LinearLayout>